# drla

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml  github-actions.yml
auxiliary/: CMakeLists.txt
auxiliary/include/drla/auxiliary/: episode_saver.h  metrics_logger.h  serialise_json.h  tensor_media.h  tensor_to_image.h
auxiliary/src/: env_manager.cpp  episode_saver.cpp  metrics_logger.cpp  serialise_json.cpp  tensor_media.cpp  tensor_to_image.cpp
cmake/: GifEncoder.cmake  drlaConfig.cmake.in  lodepng.cmake  nlohmann_json.cmake  spdlog.cmake  tensorboard_logger.cmake
include/drla/: agent.h  callback.h  configuration.h  environment.h  interactive_agent.h  metrics.h  model.h  stats.h  types.h
include/drla/auxiliary/: env_manager.h  serialise_json.h
include/drla/configuration/: algorithm.h  model.h  serialise_json.h
include/drla/model/: actor_net.h  cnn_extractor.h  fc_block.h  feature_extractor.h  mlp_extractor.h  policy_action_output.h  res_block.h  utils.h
src/: functions.h  sender_reciever.h  threadpool.h
src/agent/: agent.cpp  agent_types.h  agent_utils.h  hybrid_agent.cpp  hybrid_agent.h  interactive_agent.cpp  mcts.h  mcts_agent.cpp  mcts_agent.h  off_policy_agent.cpp  off_policy_agent.h  on_policy_agent.cpp  on_policy_agent.h
src/algorithm/: a2c.cpp  a2c.h  algorithm.h  dqn.cpp  dqn.h  dreamer.cpp  dreamer.h  muzero.cpp  muzero.h  optimiser.cpp  optimiser.h  ppo.cpp  ppo.h  sac.cpp  sac.h  utils.h
src/auxiliary/: env_manager.cpp  serialise_json.cpp
src/buffers/: episode.h  episodic_per_buffer.cpp  episodic_per_buffer.h  hybrid_episode.cpp  hybrid_episode.h  hybrid_replay_buffer.cpp  hybrid_replay_buffer.h  mcts_episode.cpp  mcts_episode.h  mcts_replay_buffer.cpp  mcts_replay_buffer.h  minibatch_buffer.cpp  minibatch_buffer.h  off_policy_episode.cpp  off_policy_episode.h  replay_buffer.cpp  replay_buffer.h  rollout_buffer.cpp  rollout_buffer.h  tensor_storage.cpp  tensor_storage.h
src/common/: functions.h  get_time.cpp  get_time.h  print_time.cpp  sender_receiver.h  sender_reciever.h  tensor_storage.cpp  tensor_storage.h  threadpool.h
src/distributions/: bernoulli.cpp  bernoulli.h  categorical.cpp  categorical.h  diagonal_gaussian.cpp  diagonal_gaussian.h  dirichlet.h  discrete.h  distribution.cpp  distribution.h  normal.cpp  normal.h
src/mcts/: mcts.cpp  mcts.h
src/model/: actor_critic_model.cpp  actor_critic_model.h  actor_net.cpp  cnn_extractor.cpp  dreamer_model.cpp  dreamer_model.h  fc_block.cpp  feature_extractor.cpp  mlp_extractor.cpp  muzero_model.cpp  muzero_model.h  policy_action_output.cpp  qnet_model.cpp  qnet_model.h  random_model.cpp  random_model.h  res_block.cpp  soft_actor_critic_model.cpp  soft_actor_critic_model.h  utils.cpp
